# anti-fraud-system

./: .gitignore  README.md  preprocessing.ipynb  pyproject.toml
backend_of_service/: Dockerfile  pyproject.toml
backend_of_service/k8s/: cluster_ip_service.yaml  deployment.yaml  grafana-ingress-values.yaml  ingress.yaml  kind-config.yaml  predictor-service-monitor.yaml
backend_of_service/src/: api_schemas.py  app.py  config.py
model_training/notebooks/: preprocessing.ipynb
model_training/src/: pyspark_train.py
src/: airflow_inference.py  airflow_job.py  airflow_train.py  kafka_producer.py  pyspark_inference.py  pyspark_script.py
