[tool.poetry]
name = "backend-of-service"
version = "0.1.0"
description = ""
authors = ["Aleksandr Mamylov <alexmamilov619@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pyspark = "^3.5.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
prometheus-client = "^0.20.0"
starlette-exporter = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
